--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="icons">
         <div id="menu-bars" class="fas fa-bars"></div>
         <a href="#" class="fas fa-heart"></a>
-        <a href="#" class="fas fa-user"></a>
+        <a href="login.html" class="fas fa-user"></a>
     </div>
 
 </header>
