--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Log-In & Sign-Up </title>
     <link rel="stylesheet" href="style-ln.css">
 </head>
 
@@ -38,7 +38,7 @@
             <input type="email" class="input-field" placeholder="Email-Id" required>
             <input type="text" class="input-field" placeholder="Enter Password" required>
             <input type="checkbox" class="check-box"><span class="check-item">I agree to the Terms & Conditions</span>
-            <button type="submit" class="submit-btn">Sign-up</button>
+            <button type="submit" class="submit-btn">Sign-Up</button>
         </form>
     </div>
     <script>
