--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <header>
 
-    <a href="#" class="logo"><span>Modern</span>House</a>
+    <a href="index.html" class="logo"><span>Modern</span>House</a>
 
     <nav class="navbar">
         <a href="#home">home</a>
