--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
         <a href="index.html" class="logo"><span>Modern</span>House</a>
 
         <nav class="navbar">
-            <a href="index.html">home</a>
+            <a class="home-nav" href="index.html">home</a>
             <a href="#contact">contact</a>
         </nav>
     </header>
