--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="icons">
         <div id="menu-bars" class="fas fa-bars"></div>
-        <a href="#" class="fas fa-heart"></a>
+        <a href="w404.html" class="fas fa-heart"></a>
         <a href="login.html" class="fas fa-user"></a>
     </div>
 
