--- a/w404.html
+++ b/w404.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404| We can not do anything</title>
+    <link rel="stylesheet" href="w404-style.css">
 </head>
 <body>
     <div class="container container-star">
@@ -60,11 +61,15 @@
                     <div class="face">
                         <div class="mouth"></div>
                         <div class="eyes">
-                            
+                            <div class="eye-left"></div>
+                            <div class="eye-right"></div>
                         </div>
                     </div>
                 </div>
+                <div class="number">4</div>
             </div>
+            <div class="subtitle">Oops</div>
+            <button>Go Back</button>
         </div>
     </div>
 </body>
